objects/PRCGRequestModel__c.object
<CustomObject>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PRCG Request Models</relationshipLabel>
        <relationshipName>RequestModels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PRCG Request Models</relationshipLabel>
        <relationshipName>PRCG_Request_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <description>Artemus.request_model.model_display_name
varchar(25)</description>
        <label>Display Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelFamily__c</fullName>
        <label>Model Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proprietary Model</fullName>
                </value>
                <value>
                    <fullName>RA Model</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ModelIdUrl__c</fullName>
        <formula>HYPERLINK('/'&amp; Id,  ModelId__c, '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelId__c</fullName>
        <description>Artemus.request_model.model_id
numeric(38,0)</description>
        <externalId>true</externalId>
        <label>ModelId</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PortalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Artemus.request_model.is_portal_portf
bit</description>
        <label>Portal Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RebalanceFrequency__c</fullName>
        <description>Artemus.request_model.rebal_freq_id
varchar(255)</description>
        <label>Rebalance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>None/Buy Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskProfile__c</fullName>
        <description>Artemus.request_model.risk_prof_id
varchar(255)</description>
        <label>Risk Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderately Aggressive</fullName>
                </value>
                <value>
                    <fullName>Moderately Conservative</fullName>
                </value>
                <value>
                    <fullName>Non-Diversified/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RpgStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Artemus.request_model.is_rpg
bit</description>
        <label>Rpg Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VersionDate__c</fullName>
        <label>Version Date</label>
        <type>Date</type>
    </fields>
    <label>PRCG Request Model</label>
    <nameField>
        <displayFormat>PRM-{0000000000}</displayFormat>
        <label>PRCG Request Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRCG Request Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Case__c</columns>
        <columns>ModelId__c</columns>
        <columns>ModelIdUrl__c</columns>
        <columns>PortalStatus__c</columns>
        <columns>RiskProfile__c</columns>
        <columns>RpgStatus__c</columns>
        <columns>VersionDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ThisMonthRequestModels</fullName>
        <columns>NAME</columns>
        <columns>DisplayName__c</columns>
        <columns>ModelId__c</columns>
        <columns>PortalStatus__c</columns>
        <columns>RebalanceFrequency__c</columns>
        <columns>RiskProfile__c</columns>
        <columns>RpgStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month's PRCG Request Models</label>
    </listViews>
</CustomObject>